@@ -4,6 +4,8 @@
   
   * Updated setup.rb to 3.4.1
   
+  * Renamed cmd_manager to command_manager to keep names consistent
+  
 2007-03-02  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems.rb: Add bin directory before library directory,
